--- a/README.rmd
+++ b/README.rmd
@@ -27,12 +27,14 @@ The `triplot` package provides tools for exploration of machine learning predict
 
 Key functions: 
 
-* `predict_aspects()` for calculating the feature groups importance (called aspects importance) for a selected observation, 
 * `predict_triplot()` and `model_triplot()` for instance- and data-level summary of automatic aspect importance grouping, 
+* `predict_aspects()` for calculating the feature groups importance (called aspects importance) for a selected observation, 
 * `group_variables()` for grouping of correlated numeric features into aspects.
 
 The `triplot` package is a part of [DrWhy.AI](http://DrWhy.AI) universe. More information about analysis of machine learning models can be found in
 the [Explanatory Model Analysis. Explore, Explain and Examine Predictive Models](https://pbiecek.github.io/ema/) e-book.
+
+![](README_files/triplot_explained.gif)
 
 ## Installation
 
@@ -106,7 +108,7 @@ We can observe that for the given apartment `surface` has also significant, posi
 We can notice that `floor` has the small influence on the prediction of this observation, unlike in the model-level analysis.
 
 
-## Basic aspect importance
+## Aspect importance for single instance
 
 For this example we use `titanic` dataset with a logistic regression model that predicts passenger survival. Features are combined into thematic aspects.
 
